After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734162 - av-cp: Don't use deprecated GTK features
av-cp: Don't use deprecated GTK features
Status: RESOLVED FIXED
Product: gupnp-tools
Classification: Other
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-02 08:15 UTC by Jussi Kukkonen
Modified: 2019-02-22 05:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
av-cp: Don't use deprecated GTK features (68.44 KB, patch)
2014-08-02 08:15 UTC, Jussi Kukkonen
committed Details | Review

Description Jussi Kukkonen 2014-08-02 08:15:46 UTC
Patch makes all but one deprecation warning vanish with GTK+ master
(the remaining "GtkMisc:xalign" is internal to some GtkMenu widget)
and should work with GTK+ >= 3.0.
Comment 1 Jussi Kukkonen 2014-08-02 08:15:49 UTC
Created attachment 282312 [details] [review]
av-cp: Don't use deprecated GTK features

Use Grid instead of VBox or HBox, use Scale instead of HScale or
Vscale.

Don't use GtkMisc properties or stock items.
Comment 2 Jens Georg 2014-08-10 19:24:32 UTC
Attachment 282312 [details] pushed as 0b1a884 - av-cp: Don't use deprecated GTK features