av-cp: Don't use deprecated GTK features

Use Grid instead of VBox or HBox, use Scale instead of HScale or
Vscale.

Don't use GtkMisc properties or stock items.

https://bugzilla.gnome.org/show_bug.cgi?id=734162